app/globals.css
@import "tailwindcss";


@theme inline {
  /** Font tokens **/
  --font-brand: var(--font-brand);
  --font-app: var(--font-app);
  

  /** Primitive colors **/
  --color-rose: #ce3d7c;
  --color-baby: #66c9fa;
  --color-sky: #b4dbf7;
  --color-dark-200: #535353;
  --color-dark-500: #1f1f1f;
  --color-dark-900: #1a1a1a;
  --color-black: #000;
  --color-white: #fff;
  

  /** Color tokens **/
  --color-type-primary: var(--color-black);
  --color-type-secondary: var(--color-dark-500);
  --color-media-frame: var(--color-sky);
}

